--- a/Giggle/.classpath
+++ b/Giggle/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="looks-1.3.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="looks-1.3.2.jar"/>
 	<classpathentry kind="src" path="/Imilarity"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
