--- a/Imperforate/.classpath
+++ b/Imperforate/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Imilarity"/>
+	<classpathentry kind="lib" path="looks-1.3.2.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
